Переход на реактивный стек